<resources>
    <string name="app_name">DTrack</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Main Screen strings -->
    <string name="tvTest">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero book.</string>
    <string name="add_readings_title">Record Test Results</string>
    <string name="add_readings_subtitle">Record your daily blood test results</string>
    <string name="correction_calculator_title">Calculate Insulin Correction Dose</string>
    <string name="correction_calculator_subtitle">Ensure you know your Glucose Sensitivity Factor</string>
    <string name="btnFindPharmacy">Find Pharmacy</string>

    <!-- Settings Screen strings -->
    <string name="tvHelloText">Insulin Sensitivity Factor is individual to every person. Your doctor can help you to calculate your Sensitivity Factor.</string>
    <string name="tvSensitivityLabel">Sensitivity Factor:</string>
    <string name="bnSave">SAVE</string>
    <string name="tvSettings">Settings</string>

    <!-- AddReadingActivity strings -->
    <string name="title_activity_addReadingActivity">Record Blood Test Results</string>
    <string name="tvPermissionDetails">DTrack needs permission to access device location to provide required services.</string>
    <string name="btnPermission">Grant Permissions</string>

    <!-- RecordTestActivity strings -->
    <string name="test_title">Blood Test: </string>
    <string name="test_date">04 Dec 2019 at 12:30 PM </string>
    <string name="test_note_sample">15</string>
    <string name="test_note">A note for the blood test...</string>
    <string name="tvNoReadings">No Entries</string>


    <!-- Permission Screen strings -->
    <string name="tvPermissionTitle">Permissions Request</string>
    <string name="title_activity_permissions">Permissions</string>

    <!-- Map Activity strings -->
    <!--  <string name="title_activity_map">MapActivity</string> -->
    <string name="google_maps_api">AIzaSyDzsibi7KNCZQNDJHqwVybXOZuiha9GfxE</string>
    <string name="btn_find">Find</string>

    <!-- Calculator screen strings -->
    <string name="title_activity_calculator">Insulin Correction Calculator</string>
    <string name="tvCalculateLabel">Correction Calculator</string>
    <string name="tvThingsToKnowLabel">Things you will need to know:</string>
    <string name="tvToKnowList">-Target blood glucose level\n-Most recent Blood glucose test result\n-Current sensitivity factor</string>
    <string name="tvMoreInfo">More info</string>
    <string name="etTargetGlucose">Enter Target Blood Glucose level</string>
    <string name="etGlucoseTestResult">Enter Blood Test result in mmol</string>
    <string name="etSensitivityFactor">Enter sensitivity factor</string>
    <string name="tvCalcResult"> </string>
    <string name="unit"> units</string>
    <string name="btnCalculate">CALCULATE</string>
    <string name="toastText">Please enter inputs</string>


    <!-- Shared Preferences strings -->
    <string name="tvDiabetesTypeLabel">Choose Diabetes Type:</string>
    <string name="shared_prefs_file" translatable="false">android.rgu.dtrack</string>
    <string name="shared_prefs_diabetesType" translatable="false">diabetesType</string>
    <string name="shared_prefs_sensitivityFactor" translatable="false">factor</string>
    <string name="factorSavedMsg">Your entry is saved</string>
    <string name="sensitivityHint">Enter integer</string>
    <string name="tvPromptTxt">Please enter your Sensitivity Factor below</string>
    <string name="title_activity_record_test">RecordTestActivity</string>
    <string name="title_activity_map">MapActivity</string>
</resources>
