<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal">

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/test_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/test_title"/>

            <TextView
                android:id="@+id/reading_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/test_date"/>

        </LinearLayout>

        <TextView
            android:id="@+id/reading_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="3dp"
            android:textSize="18sp"
            android:text="@string/test_note_sample"/>
        <TextView
            android:id="@+id/test_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="3dp"
            android:maxLines="3"
            android:textSize="18sp"
            android:text="@string/test_note"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="3dp"
            android:background="@color/view_bg_color" />
    </LinearLayout>


</LinearLayout>