<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <TextView
                android:id="@+id/tvHelloText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvHelloText"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSensitivityLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvSensitivityLabel"
                    android:textSize="15sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp" />

                <EditText
                    android:id="@+id/etSensitivityInput"
                    android:layout_width="180dp"
                    android:layout_height="42dp"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp" />

            </LinearLayout>

            <Button
                android:id="@+id/bnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bnSave"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>